# warp-space

./: .gitignore  .gitmodules  LICENSE.md  README.md
Assets/: InputSystem_Actions.inputactions
Assets/Animations/: Door.anim  Door.controller  FadeComplete.cs  FadeCompleteState.cs  Image.controller  SceneFade.anim  SceneFade.controller  SceneFadedIn.anim  SceneFadedOut.anim  WarpLighting.anim
Assets/Editor/: CorridorEditor.cs  GameLevelEditor.cs  GameMapControllerEditor.cs  GameMapEditor.cs  GameMapGeneratorEditor.cs  ProgressionManagerEditor.cs
Assets/Editor/Resources/: game-level-editor-ui.uxml
Assets/LevelGenerator/Extensions/: LevelExtensions.asmdef  LevelExtensions.cs
Assets/LevelGenerator/Resources/programs/: ship.txt
Assets/LevelGenerator/programs/: connections.txt  ship.lp  ship.txt
Assets/Materials/: Black.mat  BlueEmissive.mat  BlueLessEmissive.mat  BlueMediumEmissive.mat  Enemy.mat  New Material.mat  Player.mat  RedEmissive.mat  SpawnerCover.mat
Assets/Prefabs/: Corridor.prefab  CorridorEntranceN.prefab  HullDiagNE.prefab  RoomCorner.prefab  RoomCornerDoorN.prefab  RoomCornerNE.prefab  RoomDoorN.prefab  RoomInternal.prefab  RoomWall.prefab
Assets/Prefabs/Enemy/: Enemy.prefab  Point Light.prefab
Assets/Prefabs/Layout/: Breach.prefab  Corridor.prefab  CorridorEntranceBlockedN.prefab  CorridorEntranceN.prefab  CorridorEntranceOpenN.prefab  GameObject.prefab  Hull.prefab  HullCornerNE.prefab  HullDiagSW.prefab  HullN.prefab  HullNextToBreachNW.prefab  HullNextToCorner.prefab  HullStrToDiagJoinerN.prefab  JoinerSW.prefab  NavMesh-RoomDoorN 1.asset  NosePiece.prefab  OLDHullStrToDiagJoinerSE.prefab  PolyShape.prefab  Room.prefab  RoomBreach.prefab  RoomCornerDoorE.prefab  RoomCornerDoorN.prefab  RoomCornerNE.prefab  RoomDoorN.prefab  RoomInternal.prefab  RoomWallN.prefab  ShipFloorTriangleNE.prefab  ShipFloorTriangleSW.prefab  ShipSquare.prefab  WarpControl.prefab
Assets/Prefabs/Player/: Player.prefab
Assets/Scenes/: MainScene.unity  SampleScene.unity
Assets/Scenes/MainScene/: NavMesh-GameMap.asset  NavMesh-InternalFloor.asset
Assets/Scripts/: EnemySpawner.cs  GameLevel.cs  GameMap.cs  GameMapController.cs  PauseController.cs  ProgressionManager.cs
Assets/Scripts/Enemy/: Constants.cs  EnemyController.cs  EnemyMovement.cs  EnemySpawner.cs
Assets/Scripts/Enemy/States/: ChangeRoomState.cs  EnemyState.cs  InitialState.cs  PatrolState.cs  PursueState.cs
Assets/Scripts/Layout/: Constants.cs  Corridor.cs  CorridorEntrance.cs  Directions.cs  GameMap.cs  GameMapGenerator.cs  Layout.asmdef  LayoutUtils.cs  MapSquareData.cs  RoomData.cs
Assets/Scripts/MapObjects/: ConnectedRooms.cs  CorridorController.cs  CorridorEntrance.cs  CorridorFactory.cs  Door.cs  DoorController.cs  GameMapController.cs  HullController.cs  HullFactory.cs  HullPiece.cs  LightController.cs  MapObjects.asmdef  ObjectUtils.cs  Portal.cs  PortalEnd.cs  Pulser.cs  RoomController.cs  RoomFactory.cs  Utils.cs  WarpController.cs
Assets/Scripts/Player/: CameraFollowPlayer.cs  HealthBar.cs  HealthEntry.cs  PlayerController.cs  PlayerMovement.cs
Assets/Settings/: DefaultVolumeProfile.asset  PC_RPAsset.asset  UniversalRenderPipelineGlobalSettings.asset
Assets/Tests/: Tests.asmdef
Assets/Tests/EditMode/: EditMode.asmdef
Assets/Tests/EditMode/LevelGeneratorTests/: TestLevelGenerator.cs
Assets/Tests/LevelGeneratorTests/: LevelGeneratorTests.asmdef  TestLevelGenerator.cs
Assets/Tests/PlayMode/: PlayMode.asmdef
Assets/Tests/PlayMode/GameMapTests/: TestGameMap.cs  TestGameMapGenerator.cs
Assets/TextMesh Pro/Resources/Fonts & Materials/: Square-Black SDF.asset
LevelGenerator/: CMakeLists.txt  install-cpp-only.bat  install.bat
LevelGenerator/level-gen-cpp/: CMakeLists.txt  level.cpp  level_gen.cpp
LevelGenerator/level-gen-cpp/include/: level_gen.h  level_impl.h  program.h.in
LevelGenerator/level-gen-cpp/programs/: constants.lp  portal1.lp  portal10.lp  portal11.lp  portal12.lp  portal13.lp  portal14.lp  portal2.lp  portal5.lp  portal6.lp  portal7.lp  portal8.lp  ship.lp  ship3.lp  ship8.lp  ship_old.lp  ship_with_room_counts.lp
LevelGenerator/level-gen-cpp/python/: PICLASP_RESULT.txt  performance_test.py  portfolio.txt  reify_runner.py  results2.txt  results_after_piclasp_no_rand.txt  results_after_piclasp_rand_various_specs.txt  runner.py
LevelGenerator/level-gen-cpp/tests/: test-cancel.cpp  test-create.cpp  test-fuzz.cpp  test-solve.cpp
LevelGenerator/level-gen-csharp/: CMakeLists.txt  LevelGenerator.csproj.in  Program.cs.in
LevelGenerator/level-gen-python/: performance_test.py  reify_runner.py  results.py  results.txt  runner.py
LevelGenerator/level-gen-python/asp/: metaC.lp  ship_with_level_concepts.lp
LevelGenerator/level-gen-python/clingo/: portfolio.txt
LevelGenerator/level-gen-python/evaluation/: plotter.py  plotter2.py  results_per_level_1.csv  runner.py  runner_by_level.py  survey_results.csv  survey_results_plotter.py
LevelGenerator/level-gen-python/evaluation/metrics/: average_room_size.py  density.py  exploration.py  helpers.py  level.py  map_linearity.py  metric.py  path_redundancy.py  proximity_to_danger.py  room_count.py
LevelGenerator/level-gen-python/programs/: portal3.lp  portal8.lp  portal_old.lp  ship11.lp
LevelGenerator/level-gen-python/prototyping/: performance_test_after_piclasp.py  performance_test_param_sets.py  performance_test_single_params.py  piclasp_result.txt  reify_runner.py  results_single_params.py  results_single_params.txt  runner.py
LevelGenerator/level-gen-python/prototyping/asp/: portal11.lp  portal4.lp  portal9.lp  ship5.lp
ProjectSettings/: EditorBuildSettings.asset  NavMeshAreas.asset  ProjectSettings.asset  TagManager.asset
UIElementsSchema/: UnityEditor.Experimental.GraphView.xsd
bindings/: .gitignore  CMakeLists.txt  install.bat
bindings/bindings-cpp/: CMakeLists.txt  bindings.cpp
bindings/bindings-cpp/include/: bindings.h
bindings/bindings-cs/: CMakeLists.txt  Program.cs.in
